@@ -1,4 +1,4 @@
-This is web2c.info, produced by makeinfo version 6.4 from web2c.texi.
+This is web2c.info, produced by makeinfo version 6.5 from web2c.texi.
 
 This file documents the installation and use of the programs in Web2c,
 an implementation of Donald Knuth's TeX system.
